--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                        rel="noopener noreferrer" 
                        class="video-thumbnail-link">
                         <div class="video-thumbnail-image">
-                            <img src="images/video-thumbnail-1.jpg" alt="Aidan Stretch on CNN" class="thumbnail-img">
+                            <img src="video-thumbnail-1.jpg" alt="Aidan Stretch on CNN" class="thumbnail-img">
                             <div class="video-thumbnail-overlay">
                                 <div class="play-button-small">
                                     <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -164,7 +164,7 @@
                        rel="noopener noreferrer" 
                        class="video-thumbnail-link">
                         <div class="video-thumbnail-image">
-                            <img src="images/video-thumbnail-2.jpg" alt="Aidan Stretch on CNN" class="thumbnail-img">
+                            <img src="video-thumbnail-2.jpg" alt="Aidan Stretch on CNN" class="thumbnail-img">
                             <div class="video-thumbnail-overlay">
                                 <div class="play-button-small">
                                     <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -314,4 +314,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
