--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-image-container">
-            <img src="https://images.unsplash.com/photo-1578662996442-48f60103fc96?w=1920&q=80" alt="Ukraine" class="hero-image">
+            <img src="">
             <div class="hero-overlay">
                 <div class="container">
                     <div class="hero-content">
@@ -314,5 +314,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
