--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="hero-content">
                         <h1 class="hero-title">Aidan Stretch</h1>
                         <p class="hero-subtitle">American journalist reporting from Ukraine</p>
-                        <p class="hero-description">Commentating on-air for CNN & France 24. Writing in The Free Press, Atlantic Council, Wall Street Journal, Kyiv Independent, National Review, and Pulse</p>
+                        <p class="hero-description">Commentating on-air for CNN & France 24. Writing for The Free Press, Atlantic Council, Kyiv Independent, National Review, and Pulse</p>
                         <div class="hero-buttons">
                             <a href="#contact" class="btn btn-primary">Get In Touch</a>
                             <a href="#experience" class="btn btn-secondary">View Experience</a>
@@ -314,6 +314,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
