fix header and about me

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                     <div class="hero-content">
                         <h1 class="hero-title">Aidan Stretch</h1>
                         <p class="hero-subtitle">American journalist reporting from Ukraine</p>
-                        <p class="hero-description">Commentating on-air for CNN & France 24. Writing for The Free Press, Atlantic Council, Kyiv Independent, National Review, and Pulse</p>
+                        <p class="hero-description">Independent Journalist & Foreign Policy Analyst. Writing commenting and offering analysis from Ukraine.</p>
                         <div class="hero-buttons">
-                            <a href="#contact" class="btn btn-primary">Get In Touch</a>
+                            <a href="#contact" class="btn btn-primary">Contact</a>
                         </div>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <p class="lead">
-                        American journalist reporting from Ukraine, providing on-air commentary for CNN and France 24, and writing for leading publications including The Free Press, Atlantic Council, Wall Street Journal, Kyiv Independent, and National Review.
+                        I am an American journalist and foreign policy analyst based in Ukraine. I have written for leading publications including The Free Press, The Atlantic Council, The Wall Street Journal, The Kyiv Independent, and National Review. I am the author of the Substack Pulse. I am also a regular on-air commentator on networks like France 24 and CNN, providing analysis on the war.
                     </p>
                     <p>
                         Based in Ukraine, I cover international affairs and foreign policy, with a focus on the ongoing conflict and its broader implications. My work combines on-the-ground reporting with analytical commentary, contributing to Pulse, a Substack newsletter on foreign affairs from Ukraine.
@@ -260,6 +260,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
