--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
                 <div class="container">
                     <div class="hero-content">
                         <h1 class="hero-title">Aidan Stretch</h1>
-                        <p class="hero-subtitle">Independent Journalist & Foreign Policy Analyst. Writing, commenting, and offering analysis from Ukraine.</p>
+                        <p class="hero-subtitle">Independent Journalist & Foreign Policy Analyst</p>
+                        <p class="hero-description">Writing, commenting, and offering analysis from Ukraine.</p>
+
                         <div class="hero-buttons">
                             <a href="#contact" class="btn btn-primary">Contact</a>
                         </div>
@@ -226,6 +228,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
