--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
+    <!-- Contact Section 
     <section id="contact" class="contact">
         <div class="container">
             <h2 class="section-title">Get In Touch</h2>
@@ -213,7 +213,7 @@
             </div>
         </div>
     </section>
-
+-->
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
@@ -228,6 +228,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
