--- a/index.html
+++ b/index.html
@@ -150,6 +150,30 @@
                         </div>
                     </a>
                 </div>
+                <div class="video-thumbnail-card">
+                    <a href="https://www.france24.com/en/video/20250928-ukraine-kyiv-hit-by-massive-russian-drone-and-missile-attack" 
+                       target="_blank" 
+                       rel="noopener noreferrer" 
+                       class="video-thumbnail-link">
+                        <div class="video-thumbnail-image">
+                            <img src="france24pic.jpg" alt="Aidan Stretch on France24" class="thumbnail-img">
+                            <div class="video-thumbnail-overlay">
+                                <div class="play-button-small">
+                                    <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <circle cx="30" cy="30" r="30" fill="white" opacity="0.9"/>
+                                        <path d="M23 18L23 42L42 30L23 18Z" fill="black"/>
+                                    </svg>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="video-thumbnail-info">
+                            <h3 class="video-thumbnail-title">Kyiv hit by massive Russian drone and missile attack</h3>
+                            <p class="video-thumbnail-outlet">France24</p>
+                            <p class="video-thumbnail-date">2 days ago</p>
+                        </div>
+                    </a>
+                </div>
+                
             </div>
         </div>
     </section>
@@ -228,6 +252,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
