--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         <div class="video-thumbnail-info">
                             <h3 class="video-thumbnail-title">Kyiv hit by massive Russian drone and missile attack</h3>
                             <p class="video-thumbnail-outlet">France24</p>
-                            <p class="video-thumbnail-date">2 days ago</p>
+                            <p class="video-thumbnail-date">1 month ago</p>
                         </div>
                     </a>
                 </div>
@@ -252,6 +252,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
