--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-image-container">
+            <img src="ukraine_pic.jpeg" class="hero-image" alt="Kyiv under attack">
             <div class="hero-overlay">
                 <div class="container">
                     <div class="hero-content">
@@ -251,6 +252,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
