--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
-                <li><a href="#publications" class="nav-link">Publications</a></li>
-                <li><a href="#videos" class="nav-link">Videos</a></li>
+                <li><a href="#publications" class="nav-link">Featured Work</a></li>
+                <li><a href="#videos" class="nav-link">On-Air Commentary</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
             <button class="mobile-menu-toggle" aria-label="Toggle menu">
@@ -252,6 +252,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
