--- a/index.html
+++ b/index.html
@@ -173,6 +173,30 @@
                         </div>
                     </a>
                 </div>
+                <div class="video-thumbnail-card">
+                    <a href="https://www.cbsnews.com/video/russia-tempers-expectations-over-ukraine-peace-deal-progress/" 
+                       target="_blank" 
+                       rel="noopener noreferrer" 
+                       class="video-thumbnail-link">
+                        <div class="video-thumbnail-image">
+                            <img src="video-thumbnail-1.jpg" alt="Aidan Stretch on CBS" class="thumbnail-img">
+                            <div class="video-thumbnail-overlay">
+                                <div class="play-button-small">
+                                    <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <circle cx="30" cy="30" r="30" fill="white" opacity="0.9"/>
+                                        <path d="M23 18L23 42L42 30L23 18Z" fill="black"/>
+                                    </svg>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="video-thumbnail-info">
+                            <h3 class="video-thumbnail-title">Russia tempers expectations over Ukraine peace deal progress</h3>
+                            <p class="video-thumbnail-outlet">CBS News</p>
+                            <p class="video-thumbnail-date">1 day ago</p>
+                        </div>
+                    </a>
+                </div>
+                
                 
             </div>
         </div>
@@ -252,6 +276,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
