--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                        rel="noopener noreferrer" 
                        class="video-thumbnail-link">
                         <div class="video-thumbnail-image">
-                            <img src="video-thumbnail-1.jpg" alt="Aidan Stretch on CBS" class="thumbnail-img">
+                            <img src="cbs_thumbnail.png" alt="Aidan Stretch on CBS" class="thumbnail-img">
                             <div class="video-thumbnail-overlay">
                                 <div class="play-button-small">
                                     <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -276,6 +276,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
