--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
                     <p class="publication-summary">Exploring the connections between local communities in America and the war in Ukraine, examining how international conflicts resonate in unexpected places and shape local perspectives.</p>
                     <a href="https://muckrack.com/aidan-stretch/articles" target="_blank" rel="noopener noreferrer" class="publication-link">Read Article →</a>
                 </article>
+                <article class="publication-card">
+                    <div class="publication-date">November 23, 2025</div>
+                    <h3 class="publication-title">What Ukrainians Think About Trump’s Peace Plan</h3>
+                    <p class="publication-outlet">The Free Press</p>
+                    <p class="publication-summary">Volodymyr Zelensky has been hurt by a corruption scandal. But I spoke to Ukrainians who have rallied around his defiance toward the U.S.-Russia proposal.</p>
+                    <a href="https://www.thefp.com/p/what-ukrainians-think-about-trumps" target="_blank" rel="noopener noreferrer" class="publication-link">Read Article →</a>
+                </article>
             </div>
         </div>
     </section>
@@ -276,6 +283,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
