--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         <div class="video-thumbnail-info">
                             <h3 class="video-thumbnail-title">Russia intensifies deadly attacks on Kyiv</h3>
                             <p class="video-thumbnail-outlet">CNN</p>
-                            <p class="video-thumbnail-date">2 days ago</p>
+                            <p class="video-thumbnail-date" data-published="2025-02-10"></p>
                         </div>
                     </a>
                 </div>
@@ -286,6 +286,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
