--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <div class="video-thumbnail-info">
                             <h3 class="video-thumbnail-title">Russia tempers expectations over Ukraine peace deal progress</h3>
                             <p class="video-thumbnail-outlet">CBS News</p>
-                            <p class="video-thumbnail-date">1 day ago</p>
+                            <p class="video-thumbnail-date">November 25, 2025</p>
                         </div>
                     </a>
                 </div>
@@ -155,7 +155,7 @@
                         <div class="video-thumbnail-info">
                             <h3 class="video-thumbnail-title">Russia intensifies deadly attacks on Kyiv</h3>
                             <p class="video-thumbnail-outlet">CNN</p>
-                            <p class="video-thumbnail-date" data-published="2025-10-10"></p>
+                            <p class="video-thumbnail-date">November 25, 2025</p>
                         </div>
                     </a>
                 </div>
@@ -286,6 +286,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
