--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
                         <p class="hero-description">Writing, commentating, and offering analysis from Ukraine.</p>
 
                         <div class="hero-buttons">
-                            <a href="#contact" class="btn btn-primary">Contact</a>
+                            <button class="btn btn-primary" id="contactButton">Contact</button>
                         </div>
+
                     </div>
                 </div>
             </div>
@@ -272,6 +273,31 @@
         </div>
     </section>
 -->
+        <!-- Contact Modal -->
+    <div id="contact-modal" class="modal">
+        <div class="modal-backdrop"></div>
+        <div class="modal-dialog">
+            <button class="modal-close" aria-label="Close contact form">&times;</button>
+            <h2 class="modal-title">Contact Aidan</h2>
+            <p class="modal-subtitle">Send a message directly to my inbox.</p>
+            <form id="contactModalForm" class="modal-form">
+                <div class="form-group">
+                    <label for="modal-name">Name</label>
+                    <input type="text" id="modal-name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="modal-email">Your Email</label>
+                    <input type="email" id="modal-email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="modal-message">Message</label>
+                    <textarea id="modal-message" name="message" rows="5" required></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Send Message</button>
+            </form>
+        </div>
+    </div>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
@@ -286,6 +312,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
