Update EmailJS public key

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
     <!-- EmailJS Configuration (must be before EmailJS script loads) -->
     <script>
         // EmailJS Public Key - UPDATE THIS with your actual public key from https://dashboard.emailjs.com/admin/account
-        window.EMAILJS_PUBLIC_KEY = '_84eY4ppSzQCUkW8u';
+        window.EMAILJS_PUBLIC_KEY = 'PvBHofjpJuaSlRUL1';
     </script>
     
     <!-- EmailJS SDK - Load with multiple fallback methods -->
