Fix form submission - use fetch API for reliable FormSubmit delivery

--- a/index.html
+++ b/index.html
@@ -290,6 +290,8 @@
                 <input type="hidden" name="_subject" value="New Contact Form Submission from Aidan Stretch Website">
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_template" value="box">
+                <input type="hidden" name="_autoresponse" value="Thank you for contacting Aidan Stretch. I will get back to you soon!">
+                <!-- Prevent FormSubmit from showing their default page -->
                 <input type="hidden" name="_next" value="">
                 
                 <div class="form-group">
