--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <button class="modal-close" aria-label="Close contact form">&times;</button>
             <h2 class="modal-title">Contact Aidan</h2>
             <p class="modal-subtitle">Send a message directly to my inbox.</p>
-            <form id="contactModalForm" class="modal-form" action="https://formsubmit.co/ethan.mcgarrity5@gmail.com" method="POST">
+            <form id="contactModalForm" class="modal-form" action="https://formsubmit.co/aidanstretch01@gmail.com" method="POST">
                 <!-- FormSubmit - No API keys needed! Just your email address in the action URL -->
                 <input type="hidden" name="_subject" value="New Contact Form Submission from Aidan Stretch Website">
                 <input type="hidden" name="_captcha" value="false">
@@ -326,6 +326,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
