--- a/index.html
+++ b/index.html
@@ -80,18 +80,14 @@
             <h2 class="section-title">Featured Work</h2>
             <div class="publications-grid">
                 <article class="publication-card">
-                    <div class="publication-date">November 23, 2025</div>
-                    <h3 class="publication-title">What Ukrainians Think About Trump’s Peace Plan</h3>
+                    <h3 class="publication-title">Aidan Stretch | The Free Press</h3>
                     <p class="publication-outlet">The Free Press</p>
-                    <p class="publication-summary">Volodymyr Zelensky has been hurt by a corruption scandal. But I spoke to Ukrainians who have rallied around his defiance toward the U.S.-Russia proposal.</p>
-                    <a href="https://www.thefp.com/p/what-ukrainians-think-about-trumps" target="_blank" rel="noopener noreferrer" class="publication-link">Read Article →</a>
+                    <a href="https://www.thefp.com/w/aidan-stretch" target="_blank" rel="noopener noreferrer" class="publication-link">Read Articles →</a>
                 </article>
                 <article class="publication-card">
-                    <div class="publication-date">October 15, 2025</div>
-                    <h3 class="publication-title">Will Trump End the War in Ukraine Next?</h3>
-                    <p class="publication-outlet">The Free Press</p>
-                    <p class="publication-summary">An analysis of potential shifts in U.S. foreign policy toward Ukraine under a new administration, examining the implications for the ongoing conflict and international relations.</p>
-                    <a href="https://muckrack.com/aidan-stretch/articles" target="_blank" rel="noopener noreferrer" class="publication-link">Read Article →</a>
+                    <h3 class="publication-title">Aidan Stretch | Pulse</h3>
+                    <p class="publication-outlet">Pulse</p>
+                    <a href="https://aidanstretch.substack.com/" target="_blank" rel="noopener noreferrer" class="publication-link">Read Posts →</a>
                 </article>
                 <article class="publication-card">
                     <div class="publication-date">October 5, 2025</div>
@@ -326,6 +322,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
