--- a/index.html
+++ b/index.html
@@ -76,37 +76,100 @@
 
     <!-- Publications Section -->
     <section id="publications" class="publications">
-        <div class="container">
-            <h2 class="section-title">Featured Work</h2>
-            <div class="publications-grid">
-                <article class="publication-card">
-                    <h3 class="publication-title">Aidan Stretch | The Free Press</h3>
-                    <p class="publication-outlet">The Free Press</p>
-                    <a href="https://www.thefp.com/w/aidan-stretch" target="_blank" rel="noopener noreferrer" class="publication-link">Read Articles →</a>
-                </article>
-                <article class="publication-card">
-                    <h3 class="publication-title">Aidan Stretch | Pulse</h3>
-                    <p class="publication-outlet">Pulse</p>
-                    <a href="https://aidanstretch.substack.com/" target="_blank" rel="noopener noreferrer" class="publication-link">Read Posts →</a>
-                </article>
-                <article class="publication-card">
-                    <div class="publication-date">October 5, 2025</div>
-                    <h3 class="publication-title">What Happens When Russia Takes Over Your School</h3>
-                    <p class="publication-outlet">The Free Press</p>
-                    <p class="publication-summary">A firsthand account of the impact of Russian occupation on education systems in Ukraine, documenting the transformation of schools and the effects on students and communities.</p>
-                    <a href="https://muckrack.com/aidan-stretch/articles" target="_blank" rel="noopener noreferrer" class="publication-link">Read Article →</a>
-                </article>
-                <article class="publication-card">
-                    <div class="publication-date">August 18, 2025</div>
-                    <h3 class="publication-title">What Ukraine Is Teaching Worcester, Massachusetts</h3>
-                    <p class="publication-outlet">The Free Press</p>
-                    <p class="publication-summary">Exploring the connections between local communities in America and the war in Ukraine, examining how international conflicts resonate in unexpected places and shape local perspectives.</p>
-                    <a href="https://muckrack.com/aidan-stretch/articles" target="_blank" rel="noopener noreferrer" class="publication-link">Read Article →</a>
-                </article>
-                
+    <div class="container">
+        <h2 class="section-title">Featured Work</h2>
+
+        <div class="publications-grid">
+
+            <!-- Publication Card 1 -->
+            <div class="publication-thumbnail-card">
+                <a href="https://www.thefp.com/w/aidan-stretch" 
+                   target="_blank" 
+                   rel="noopener noreferrer" 
+                   class="publication-thumbnail-link">
+
+                    <div class="publication-thumbnail-image">
+                        <img src="thumb-1.jpg" alt="The Free Press" class="thumbnail-img">
+                        <div class="publication-thumbnail-overlay">
+                            <div class="read-button-small">Read</div>
+                        </div>
+                    </div>
+
+                    <div class="publication-thumbnail-info">
+                        <h3 class="publication-thumbnail-title">Aidan Stretch | The Free Press</h3>
+                        <p class="publication-thumbnail-outlet">The Free Press</p>
+                    </div>
+                </a>
             </div>
+
+            <!-- Publication Card 2 -->
+            <div class="publication-thumbnail-card">
+                <a href="https://aidanstretch.substack.com/" 
+                   target="_blank" 
+                   rel="noopener noreferrer" 
+                   class="publication-thumbnail-link">
+
+                    <div class="publication-thumbnail-image">
+                        <img src="thumb-2.jpg" alt="Pulse Substack" class="thumbnail-img">
+                        <div class="publication-thumbnail-overlay">
+                            <div class="read-button-small">Read</div>
+                        </div>
+                    </div>
+
+                    <div class="publication-thumbnail-info">
+                        <h3 class="publication-thumbnail-title">Aidan Stretch | Pulse</h3>
+                        <p class="publication-thumbnail-outlet">Pulse (Substack)</p>
+                    </div>
+                </a>
+            </div>
+
+            <!-- Publication Card 3 -->
+            <div class="publication-thumbnail-card">
+                <a href="https://muckrack.com/aidan-stretch/articles"
+                   target="_blank"
+                   rel="noopener noreferrer"
+                   class="publication-thumbnail-link">
+
+                    <div class="publication-thumbnail-image">
+                        <img src="thumb-3.jpg" alt="Russian takeover of schools article" class="thumbnail-img">
+                        <div class="publication-thumbnail-overlay">
+                            <div class="read-button-small">Read</div>
+                        </div>
+                    </div>
+
+                    <div class="publication-thumbnail-info">
+                        <div class="publication-thumbnail-date">October 5, 2025</div>
+                        <h3 class="publication-thumbnail-title">What Happens When Russia Takes Over Your School</h3>
+                        <p class="publication-thumbnail-outlet">The Free Press</p>
+                    </div>
+                </a>
+            </div>
+
+            <!-- Publication Card 4 -->
+            <div class="publication-thumbnail-card">
+                <a href="https://muckrack.com/aidan-stretch/articles"
+                   target="_blank"
+                   rel="noopener noreferrer"
+                   class="publication-thumbnail-link">
+
+                    <div class="publication-thumbnail-image">
+                        <img src="thumb-4.jpg" alt="Worcester Ukraine article" class="thumbnail-img">
+                        <div class="publication-thumbnail-overlay">
+                            <div class="read-button-small">Read</div>
+                        </div>
+                    </div>
+
+                    <div class="publication-thumbnail-info">
+                        <div class="publication-thumbnail-date">August 18, 2025</div>
+                        <h3 class="publication-thumbnail-title">What Ukraine Is Teaching Worcester, Massachusetts</h3>
+                        <p class="publication-thumbnail-outlet">The Free Press</p>
+                    </div>
+                </a>
+            </div>
+
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Videos Section -->
     <section id="videos" class="videos">
@@ -322,6 +385,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
