--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                    class="publication-thumbnail-link">
 
                     <div class="publication-thumbnail-image">
-                        <img src="thumb-1.jpg" alt="The Free Press" class="thumbnail-img">
+                        <img src="freepress_thumbnail.jpg" alt="The Free Press" class="thumbnail-img">
                         <div class="publication-thumbnail-overlay">
                             <div class="read-button-small">Read</div>
                         </div>
@@ -385,6 +385,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
