--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
             <!-- Publication Card 3 -->
             <div class="publication-thumbnail-card">
-                <a href="https://muckrack.com/aidan-stretch/articles"
+                <a href="https://kyivindependent.com/trump-likes-a-deal-zelensky-should-offer-him-ukraines-government-tech-for-free/"
                    target="_blank"
                    rel="noopener noreferrer"
                    class="publication-thumbnail-link">
@@ -139,8 +139,8 @@
 
                     <div class="publication-thumbnail-info">
                         <div class="publication-thumbnail-date">October 5, 2025</div>
-                        <h3 class="publication-thumbnail-title">What Happens When Russia Takes Over Your School</h3>
-                        <p class="publication-thumbnail-outlet">The Free Press</p>
+                        <h3 class="publication-thumbnail-title">Trump likes a deal. Zelensky should offer him Ukraine’s government tech — for free</h3>
+                        <p class="publication-thumbnail-outlet">Kyiv Independent</p>
                     </div>
                 </a>
             </div>
@@ -385,6 +385,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
