--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                    class="publication-thumbnail-link">
 
                     <div class="publication-thumbnail-image">
-                        <img src="thumb-3.jpg" alt="Russian takeover of schools article" class="thumbnail-img">
+                        <img src="kyiv_thumbnail.jpg" alt="Russian takeover of schools article" class="thumbnail-img">
                         <div class="publication-thumbnail-overlay">
                             <div class="read-button-small">Read</div>
                         </div>
@@ -147,13 +147,13 @@
 
             <!-- Publication Card 4 -->
             <div class="publication-thumbnail-card">
-                <a href="https://muckrack.com/aidan-stretch/articles"
+                <a href="https://www.atlanticcouncil.org/blogs/ukrainealert/moldova-accuses-russia-of-election-interference-ahead-of-key-vote/"
                    target="_blank"
                    rel="noopener noreferrer"
                    class="publication-thumbnail-link">
 
                     <div class="publication-thumbnail-image">
-                        <img src="thumb-4.jpg" alt="Worcester Ukraine article" class="thumbnail-img">
+                        <img src="atlantic_thumbnail.jpg" alt="Worcester Ukraine article" class="thumbnail-img">
                         <div class="publication-thumbnail-overlay">
                             <div class="read-button-small">Read</div>
                         </div>
@@ -161,8 +161,8 @@
 
                     <div class="publication-thumbnail-info">
                         <div class="publication-thumbnail-date">August 18, 2025</div>
-                        <h3 class="publication-thumbnail-title">What Ukraine Is Teaching Worcester, Massachusetts</h3>
-                        <p class="publication-thumbnail-outlet">The Free Press</p>
+                        <h3 class="publication-thumbnail-title">Moldova accuses Russia of election interference ahead of key vote</h3>
+                        <p class="publication-thumbnail-outlet">The Atlantic Counsel</p>
                     </div>
                 </a>
             </div>
@@ -385,6 +385,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
