--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <p class="lead">
-                        I am an American journalist and foreign policy analyst based in Ukraine. I have written for leading publications including The Free Press, The Atlantic Council, The Wall Street Journal, The Kyiv Independent, and National Review. I am the author of the Substack Pulse. I also provide on-air commentatary on the war for major news networks including France 24, CBS, and CNN.
+                        I am an American journalist and foreign policy analyst based in Ukraine. I have written for leading publications including The Free Press, The Atlantic Council, The Wall Street Journal, The Kyiv Independent, and National Review. I am the author of the Substack Pulse. I also provide on-air commentary on the war for major news networks including France 24, CBS, and CNN.
                     </p>
                     
                 </div>
@@ -384,6 +384,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
